# CredIdentity

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: hf_sync.yml
backend/: credit_engine.py  main.py  schemas.py
dashboard/: app.py
dashboard/pages/: health_card.py  loan_officer.py  portfolio.py
dashboard/utils/: api_client.py  loan_matcher.py  visualizations.py
data/processed/: msme_demo_features.csv  msme_engineered_features.csv
data_pipeline/: build_demo_dataset.py  engineer_features.py  feature_adapter.py  generate_data.py
model/: feature_importance.json  idbi-msme-financial-health-score-final.ipynb  validation_report.json
scripts/: build_validation_report.py  diagnose_bag.py  slim_model.py
tests/: test_feature_adapter.py
